# LittleTex

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run_web.py
samples/: Comprehensive Feature Test.tex  input_file.md  output_file.tex
src/: cli.py  cli_copy.py  main.py
src/cli/: argument_parser.py  splash.py
src/config/: pipeline_config.py
src/core/: app.py  ast.py  parser.py  pipeline.py  pipeline_builder.py  renderer.py  renderer_copy.py  tokenizer.py
src/pipeline/: __init__.py  builder.py  core.py  stages.py
src/utils/: pdf_generator.py  text_processing.py
tests/: test_parser.py
web/: app.py
web/templates/: index.html  results.html
